--- a/Extranet.mvc/compilerconfig.json
+++ b/Extranet.mvc/compilerconfig.json
@@ -1,6 +1,6 @@
 ﻿[
 	{
 		"outputFile": "wwwroot/css/default.css",
-		"inputFile": "wwwroot/css/default.less"
+		"inputFile": "wwwroot/css/default.scss"
 	},
 ]
