Added ViewComponents for Login Options and the start of an Alert component.

--- a/Extranet.mvc/appsettings.json
+++ b/Extranet.mvc/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
 	"ConnectionStrings": {
-		"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Extranet;Trusted_Connection=True;MultipleActiveResultSets=true",
+		"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=www.PinDigital.com;Trusted_Connection=True;MultipleActiveResultSets=true",
 		"SqlConnection": "Data Source=COLINLAPTOP;Initial Catalog=Intranet;Integrated Security=True;MultipleActiveResultSets=true"
 	},
 	"Logging": {
