--- a/Extranet.mvc/Properties/launchSettings.json
+++ b/Extranet.mvc/Properties/launchSettings.json
@@ -15,7 +15,7 @@
 				"ASPNETCORE_ENVIRONMENT": "Development"
 			}
 		},
-		"Extranet": {
+		"Website": {
 			"commandName": "Project",
 			"launchBrowser": true,
 			"launchUrl": "http://localhost:5000",
