Changed ApplicationUser back from AppicationUserModel.  Added migration to rename AspNet user tables.

--- a/Extranet.mvc/appsettings.json
+++ b/Extranet.mvc/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
 	"ConnectionStrings": {
-		"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=www.PinDigital.com;Trusted_Connection=True;MultipleActiveResultSets=true",
-		"SqlConnection": "Data Source=COLINLAPTOP;Initial Catalog=Intranet;Integrated Security=True;MultipleActiveResultSets=true"
+		"SQLExpressConnection": "Server=(localdb)\\mssqllocaldb;Database=www.PinDigital.com;Trusted_Connection=True;MultipleActiveResultSets=true",
+		"DefaultConnection": "Data Source=COLINLAPTOP;Initial Catalog=www.PinDigital.com_mvc;Integrated Security=True;MultipleActiveResultSets=true"
 	},
 	"Logging": {
 		"IncludeScopes": false,
