--- a/Extranet.mvc/project.json
+++ b/Extranet.mvc/project.json
@@ -44,6 +44,7 @@
 			"version": "1.0.0-preview2-final",
 			"type": "build"
 		},
+		"Microsoft.AspNetCore.Session": "1.0.0",
 		"Newtonsoft.Json": "9.0.1"
 	},
 
