Moved DB to Azure and added JS confirm to delete address.

--- a/www.PinDigital.com/appsettings.json
+++ b/www.PinDigital.com/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
 	"ConnectionStrings": {
 		"SQLExpressConnection": "Server=(localdb)\\mssqllocaldb;Database=www.PinDigital.com;Trusted_Connection=True;MultipleActiveResultSets=true",
-		"DefaultConnection": "Data Source=COLINLAPTOP;Initial Catalog=www.PinDigital.com_mvc;Integrated Security=True;MultipleActiveResultSets=true"
+		"DefaultConnection": "Data Source=jaggs.database.windows.net;Initial Catalog=PinDigitalMVC;Persist Security Info=False;User ID=colin;Password=CJPDazure41!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
 	},
 	"Logging": {
 		"IncludeScopes": false,
