--- a/www.PinDigital.com/project.json
+++ b/www.PinDigital.com/project.json
@@ -3,38 +3,39 @@
 
 	"dependencies": {
 		"Microsoft.NETCore.App": {
-			"version": "1.0.1",
+			"version": "1.1.0",
 			"type": "platform"
 		},
-		"Microsoft.AspNetCore.Authentication.Cookies": "1.0.0",
-		"Microsoft.AspNetCore.Diagnostics": "1.0.0",
-		"Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore": "1.0.0",
-		"Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.0.0",
-		"Microsoft.AspNetCore.Mvc": "1.0.1",
+		"Microsoft.AspNetCore.Authentication.Cookies": "1.1.0",
+		"Microsoft.AspNetCore.Diagnostics": "1.1.0",
+		"Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore": "1.1.0",
+		"Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.1.0",
+		"Microsoft.AspNetCore.Mvc": "1.1.0",
 		"Microsoft.AspNetCore.Razor.Tools": {
 			"version": "1.0.0-preview2-final",
 			"type": "build"
 		},
-		"Microsoft.AspNetCore.Routing": "1.0.1",
-		"Microsoft.AspNetCore.Server.IISIntegration": "1.0.0",
-		"Microsoft.AspNetCore.Server.Kestrel": "1.0.1",
-		"Microsoft.AspNetCore.StaticFiles": "1.0.0",
-		"Microsoft.EntityFrameworkCore.SqlServer": "1.0.1",
+		"Microsoft.AspNetCore.Routing": "1.1.0",
+		"Microsoft.AspNetCore.Server.IISIntegration": "1.1.0",
+		"Microsoft.AspNetCore.Server.Kestrel": "1.1.0",
+		"Microsoft.AspNetCore.StaticFiles": "1.1.0",
+		"Microsoft.EntityFrameworkCore": "1.1.0",
+		"Microsoft.EntityFrameworkCore.SqlServer": "1.1.0",
 		"Microsoft.EntityFrameworkCore.SqlServer.Design": {
-			"version": "1.0.1",
+			"version": "1.1.0",
 			"type": "build"
 		},
 		"Microsoft.EntityFrameworkCore.Tools": {
 			"version": "1.0.0-preview2-final",
 			"type": "build"
 		},
-		"Microsoft.Extensions.Configuration.EnvironmentVariables": "1.0.0",
-		"Microsoft.Extensions.Configuration.Json": "1.0.0",
-		"Microsoft.Extensions.Configuration.UserSecrets": "1.0.0",
-		"Microsoft.Extensions.Logging": "1.0.0",
-		"Microsoft.Extensions.Logging.Console": "1.0.0",
-		"Microsoft.Extensions.Logging.Debug": "1.0.0",
-		"Microsoft.Extensions.Options.ConfigurationExtensions": "1.0.0",
+		"Microsoft.Extensions.Configuration.EnvironmentVariables": "1.1.0",
+		"Microsoft.Extensions.Configuration.Json": "1.1.0",
+		"Microsoft.Extensions.Configuration.UserSecrets": "1.1.0",
+		"Microsoft.Extensions.Logging": "1.1.0",
+		"Microsoft.Extensions.Logging.Console": "1.1.0",
+		"Microsoft.Extensions.Logging.Debug": "1.1.0",
+		"Microsoft.Extensions.Options.ConfigurationExtensions": "1.1.0",
 		"Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.0.0",
 		"Microsoft.VisualStudio.Web.CodeGeneration.Tools": {
 			"version": "1.0.0-preview2-final",
@@ -44,7 +45,7 @@
 			"version": "1.0.0-preview2-final",
 			"type": "build"
 		},
-		"Microsoft.AspNetCore.Session": "1.0.0",
+		"Microsoft.AspNetCore.Session": "1.1.0",
 		"Newtonsoft.Json": "9.0.1"
 	},
 
