--- a/www.PinDigital.com/bundleconfig.json
+++ b/www.PinDigital.com/bundleconfig.json
@@ -3,21 +3,15 @@
 [
 	{
 		"outputFileName": "wwwroot/css/default.min.css",
-		"inputFiles": [
-			"wwwroot/css/default.css"
-		]
+		"inputFiles": [ "wwwroot/css/default.css" ]
 	},
 	{
 		"outputFileName": "wwwroot/css/wide.min.css",
-		"inputFiles": [
-			"wwwroot/css/wide.css"
-		]
+		"inputFiles": [ "wwwroot/css/wide.css" ]
 	},
 	{
 		"outputFileName": "wwwroot/css/admin.min.css",
-		"inputFiles": [
-			"wwwroot/css/admin.css"
-		]
+		"inputFiles": [ "wwwroot/css/admin.css" ]
 	},
 	{
 		"outputFileName": "wwwroot/js/default.min.js",
