Tidying and moving around a bit.

--- a/www.PinDigital.com/www.PinDigital.com.csproj
+++ b/www.PinDigital.com/www.PinDigital.com.csproj
@@ -122,6 +122,7 @@
     </DotNetCliToolReference>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Core\Classes\" />
     <Folder Include="wwwroot\cms\" />
   </ItemGroup>
   <PropertyGroup Label="Configuration">
