WIP - playing with Knockout and messing with address book.

--- a/www.PinDigital.com/appsettings.json
+++ b/www.PinDigital.com/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
 	"ConnectionStrings": {
-		"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=www.PinDigital.com;Trusted_Connection=True;MultipleActiveResultSets=true",
-		"SQLExpressConnection": "Data Source=jaggs.database.windows.net;Initial Catalog=PinDigitalMVC;Persist Security Info=False;User ID=colin;Password=CJPDazure41!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+		"SQLExpressConnection": "Server=(localdb)\\mssqllocaldb;Database=www.PinDigital.com;Trusted_Connection=True;MultipleActiveResultSets=true",
+		"DefaultConnection": "Data Source=jaggs.database.windows.net;Initial Catalog=PinDigitalMVC;Persist Security Info=False;User ID=colin;Password=CJPDazure41!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
 	},
 	"Logging": {
 		"IncludeScopes": false,
